Fix dark mode search

--- a/_static/tufte.css
+++ b/_static/tufte.css
@@ -729,6 +729,10 @@ main.bd-content #main-content dl.field-list dd:not(:last-child) {
   .margin .sidebar {
     color: rgba(var(--pst-color-paragraph));
   }
+
+  div {
+    color: rgba(var(--pst-color-primary)) !important;
+  }
 }
 
 #main-content a:link,
@@ -741,15 +745,6 @@ div.sidebar {
 p.card-text {
   margin-top: 0px;
 }
-
-/* Adds dark mode */
-/*
-@media (prefers-color-scheme: dark) {
-    a:link, .tufte-underline, .hover-tufte-underline:hover {
-        text-shadow: 0.03em 0 #151515, -0.03em 0 #151515, 0 0.03em #151515, 0 -0.03em #151515, 0.06em 0 #151515, -0.06em 0 #151515, 0.09em 0 #151515, -0.09em 0 #151515, 0.12em 0 #151515, -0.12em 0 #151515, 0.15em 0 #151515, -0.15em 0 #151515;
-    }
-}
-*/
 
 #main-content a:link,
 .tufte-underline,
